--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Год проработал на предприятии по производству металлоконструкций на должности стропальщика, 
             после получил повышения до мастера участка погрузки и уже пол года нахожусь на этой должности.
             Работаю с документацией, организую погрузочно-разгрузочные работы на участке с соблюдением всех технических норм,а также
-            слежу за бозопасным выполнением работ. 
+            слежу за безопасным выполнением работ. 
          </p>
        </section>
     </main>
